# Progressive-Multifidelity-NNs

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/navierstokes/: navierstokes.py
examples/navierstokes/data/: partial_domain_idxs.txt
examples/navierstokes/models/: model1_sim_0.weights.h5  model1_sim_1.weights.h5  model1_sim_2.weights.h5  model2_sim_1.weights.h5  model2_sim_2.weights.h5  model2_traj_0.weights.h5  model2_traj_3.weights.h5  model3_sim_0.weights.h5  model3_sim_1.weights.h5  model3_sim_2.weights.h5  model4_sim_2.weights.h5  model4_traj_0.weights.h5  model4_traj_1.weights.h5
examples/reactiondiffusion/: reactiondiffusion.py
examples/reactiondiffusion/models/: model1_sim_0.weights.h5  model1_sim_1.weights.h5  model1_sim_10.weights.h5  model1_sim_11.weights.h5  model1_sim_12.weights.h5  model1_sim_13.weights.h5  model1_sim_14.weights.h5  model1_sim_15.weights.h5  model1_sim_16.weights.h5  model1_sim_17.weights.h5  model1_sim_18.weights.h5  model1_sim_19.weights.h5  model1_sim_2.weights.h5  model1_sim_20.weights.h5  model1_sim_21.weights.h5  model1_sim_22.weights.h5  model1_sim_23.weights.h5  model1_sim_24.weights.h5  model1_sim_25.weights.h5  model1_sim_26.weights.h5  model1_sim_27.weights.h5  model1_sim_28.weights.h5  model1_sim_29.weights.h5  model1_sim_3.weights.h5  model1_sim_4.weights.h5  model1_sim_5.weights.h5  model1_sim_6.weights.h5  model1_sim_7.weights.h5  (+62 more)
src/: multifidelity_utils.py  progressive_network.py  requirements.txt
src/progressive_multifidelity_nns.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
